--- a/SinaWeiboTest/res/layout/msgdetail.xml
+++ b/SinaWeiboTest/res/layout/msgdetail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/main"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
 	<ListView android:id="@+id/lvComent" android:layout_width="wrap_content"
 		android:cacheColorHint="#00000000" android:paddingTop="10px"
