--- a/trunk/Duole/res/layout/app_item.xml
+++ b/trunk/Duole/res/layout/app_item.xml
@@ -3,20 +3,22 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:gravity="center_horizontal"
-  android:layout_width="80dp"
+  android:layout_width="wrap_content"
   android:paddingTop="5dp"
-  android:layout_height="100dp">
-  <ImageView
+  android:layout_height="wrap_content">
+  <AbsoluteLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+    <ImageView
   	android:id="@+id/ivAppIcon"
-  	android:scaleType="fitCenter"
-  	android:layout_gravity="center_horizontal|top"
-  	android:layout_width="48dp"
-  	android:layout_height="48dp" />
+  	android:layout_width="150px"
+  	android:layout_height="150px" />
+  <ImageView
+  	android:id="@+id/ivKe"
+  	android:layout_width="155px"
+  	android:layout_height="155px" />
+
+  </AbsoluteLayout>
   <TextView
   	android:id="@+id/tvAppName"
-  	android:layout_width="74dp"
-  	android:ellipsize="marquee"
-  	android:textColor="#FFFF"
-  	android:layout_height="50dp"
-  	android:gravity="center_horizontal|center_vertical" />
+  	android:layout_width="wrap_content"
+  	android:layout_height="wrap_content"/>
 </LinearLayout>
