--- a/trunk/Duole/res/layout/main.xml
+++ b/trunk/Duole/res/layout/main.xml
@@ -3,5 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/ScrollLayoutTest"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
+  android:layout_height="fill_parent"
+  android:background="@drawable/bg86">
 </com.duole.layout.ScrollLayout>
