--- a/trunk/Duole/res/layout/musicplayer.xml
+++ b/trunk/Duole/res/layout/musicplayer.xml
@@ -2,9 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/llMusicPlayer" android:orientation="vertical"
 	android:layout_width="match_parent" android:layout_height="match_parent"
-	android:weightSum="1">
+	android:weightSum="1" android:background="@drawable/bg86" >
 	<Gallery android:id="@+id/musicGallery" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
-	<TextView android:text="tesfsdfsaf" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+
 </LinearLayout>
