--- a/Duole/res/values/duolestyle.xml
+++ b/Duole/res/values/duolestyle.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="DuoleText">
-		<item name="android:textColor">#000000</item>
-		<item name="android:shadowColor">#ffFFFFFF</item>
-		<item name="android:shadowRadius">1</item>
-		<item name="android:shadowDx">1</item>
+		<item name="android:textColor">#FFFFFF</item>
+
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">wrap_content</item>
 	</style>
 </resources>
