--- a/Duole/res/xml/systemconfig.xml
+++ b/Duole/res/xml/systemconfig.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-  xmlns:android="http://schemas.android.com/apk/res/android">
-	
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+	<PreferenceCategory android:title="@string/network">
+		<Preference android:defaultValue="@string/network_config"
+			android:selectable="true" android:enabled="true"
+			android:summary="@string/network_config_summary" android:title="@string/network_config"
+			android:key="preNetwork"></Preference>
+	</PreferenceCategory>
+
+	<PreferenceCategory android:title="@string/system_tweak">
+		<Preference android:title="@string/volume_tweak"
+			android:key="preVolume"></Preference>
+		<Preference android:title="@string/bright_tweak"
+			android:key="preBright"></Preference>
+	</PreferenceCategory>
+	<PreferenceCategory android:title="@string/user_info" android:key="pcUserInfo">
+		<Preference android:title="@string/device_id" android:key="preDeviceId" android:selectable="false" android:enabled="false"></Preference>
+		<Preference android:title="@string/getting_user_info" android:key="preGettingUserInfo"></Preference>
+	</PreferenceCategory>
+	<PreferenceCategory android:title="@string/security_title">
+		<Preference android:title="@string/security_changePasswd" android:key="preSecurityChangePasswd"></Preference>
+		<Preference android:title="@string/security_exit" android:key="preSecurityExit"></Preference>
+	</PreferenceCategory>
+
+
 </PreferenceScreen>
