--- a/trunk/Duole/res/xml/systemconfig.xml
+++ b/trunk/Duole/res/xml/systemconfig.xml
@@ -13,13 +13,20 @@
 		<Preference android:title="@string/bright_tweak"
 			android:key="preBright"></Preference>
 	</PreferenceCategory>
-	<PreferenceCategory android:title="@string/user_info" android:key="pcUserInfo">
-		<Preference android:title="@string/device_id" android:key="preDeviceId" android:selectable="false" android:enabled="false"></Preference>
-		<Preference android:title="@string/getting_user_info" android:key="preGettingUserInfo"></Preference>
+	<PreferenceCategory android:title="@string/user_info"
+		android:key="pcUserInfo">
+		<Preference android:title="@string/device_id" android:key="preDeviceId"
+			android:selectable="false" android:enabled="false"></Preference>
+		<Preference android:title="@string/getting_user_info"
+			android:key="preGettingUserInfo"></Preference>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/security_title">
-		<Preference android:title="@string/security_changePasswd" android:key="preSecurityChangePasswd"></Preference>
-		<Preference android:title="@string/security_exit" android:key="preSecurityExit"></Preference>
+		<Preference android:title="@string/security_changePasswd"
+			android:key="preSecurityChangePasswd"></Preference>
+
+		<Preference android:key="preCheckUpdate" android:title="@string/check_update"></Preference>
+		<Preference android:title="@string/security_exit"
+			android:key="preSecurityExit"></Preference>
 	</PreferenceCategory>
 
 
