--- a/Duole/res/xml/systemconfig.xml
+++ b/Duole/res/xml/systemconfig.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+	<PreferenceCategory android:title="@string/storage">
+		<Preference	android:selectable="false" android:enabled="true"
+			android:key="preStorage"></Preference>
+	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/network">
 		<Preference android:defaultValue="@string/network_config"
 			android:selectable="true" android:enabled="true"
