--- a/andconsd/res/layout/griditem.xml
+++ b/andconsd/res/layout/griditem.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/gridImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_centerInParent="true" />
 
     <ImageView
