--- a/SetupWizard/res/layout/passwordinput.xml
+++ b/SetupWizard/res/layout/passwordinput.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:text="@string/password_tip"
+        android:textColor="#fF0000"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <CheckBox
