--- a/SetupWizard/res/layout/topbutton.xml
+++ b/SetupWizard/res/layout/topbutton.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:background="@drawable/ignore"
         android:text="@string/maybeNextTime" />
 
     <Button
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:background="@drawable/next"
         android:text="@string/btnNext" />
     
 </RelativeLayout>
