--- a/SetupWizard/res/layout/usernameinput.xml
+++ b/SetupWizard/res/layout/usernameinput.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:text="@string/input_username"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -29,14 +29,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_alignParentLeft="true"
+		android:layout_alignRight="@+id/textView2"
         android:layout_below="@+id/textView2" >
 
         <EditText
             android:id="@+id/etEmailUserName"
             android:layout_width="100dip"
             android:layout_height="wrap_content"
-            android:hint="xiaoming"
+            android:inputType="text"
             android:singleLine="true" />
 
         <TextView
@@ -49,7 +49,7 @@
             android:id="@+id/etEmailDomain"
             android:layout_width="150dip"
             android:layout_height="wrap_content"
-            android:hint="duoleyuan.com"
+            android:inputType="text"
             android:singleLine="true" />
 
     </LinearLayout>
